[package]
name = "bstack"
version = "0.1.1"
edition = "2024"
authors = ["William Wu <williamwutq@gmail.com>", "Claude <claude@anthropic.com>"]
license = "MIT"
description = "A persistent, fsync-durable binary stack backed by a single file"
readme = "README.md"
repository = "https://github.com/williamwutq/bstack"
documentation = "https://docs.rs/bstack"
keywords = ["stack", "persistent", "file-backed", "database", "binary"]

[features]
# Enables BStack::set — in-place mutation of existing payload bytes.
set = []

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
