[package]
name = "bstack"
version = "0.1.7"
edition = "2024"
authors = ["William Wu <williamwutq@gmail.com>", "Claude <claude@anthropic.com>"]
license = "MIT"
description = "A persistent, fsync-durable binary stack backed by a single file"
readme = "README.md"
changelog = "CHANGELOG.md"
repository = "https://github.com/williamwutq/bstack"
documentation = "https://docs.rs/bstack"
keywords = ["stack", "persistent", "file-backed", "database", "binary"]
include = ["src/**/*", "Cargo.toml", "README.md", "CHANGELOG.md", "LICENSE", "examples/**/*", ".gitignore"]

[features]
# Enables BStack::set — in-place mutation of existing payload bytes.
set = []
# Enables BStackAllocator trait and BStackSlice for region management.
alloc = []
# Enables atomic compound operations: atrunc, splice, splice_into, try_extend, try_discard,
# and (with set) swap, swap_into, cas.
atomic = []

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[dev-dependencies]
rand = "0.10.1"
